// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreaksStateMessage Component Initialization renders and matches snapshot for empty state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-testid="breaks-empty-state"
      >
        <div
          data-testid="icon-container"
        >
          <span
            data-testid="coffee-mug-icon"
          >
            CoffeeMug
          </span>
        </div>
        <div
          data-testid="state-message-text"
        >
          <span
            class="intuit light body-2"
          >
            <strong
              class="intuit light inherit medium"
            >
              Assign break rules in Time settings to help you and your team track break times accurately.
            </strong>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-testid="breaks-empty-state"
    >
      <div
        data-testid="icon-container"
      >
        <span
          data-testid="coffee-mug-icon"
        >
          CoffeeMug
        </span>
      </div>
      <div
        data-testid="state-message-text"
      >
        <span
          class="intuit light body-2"
        >
          <strong
            class="intuit light inherit medium"
          >
            Assign break rules in Time settings to help you and your team track break times accurately.
          </strong>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`BreaksStateMessage Component Initialization renders and matches snapshot for error state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-testid="breaks-error-state"
      >
        <div
          data-testid="icon-container"
        >
          <span
            data-testid="alert-icon"
          >
            CircleAlertQuickbooks
          </span>
        </div>
        <div
          data-testid="state-message-text"
        >
          <span
            class="intuit light body-2"
          >
            <strong
              class="intuit light inherit medium"
            >
              Something went wrong. Please try again later
            </strong>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-testid="breaks-error-state"
    >
      <div
        data-testid="icon-container"
      >
        <span
          data-testid="alert-icon"
        >
          CircleAlertQuickbooks
        </span>
      </div>
      <div
        data-testid="state-message-text"
      >
        <span
          class="intuit light body-2"
        >
          <strong
            class="intuit light inherit medium"
          >
            Something went wrong. Please try again later
          </strong>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
